--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -83,7 +83,7 @@
     <!-- web-header -->
     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 my_alc nopadding header-prof-part header-xs">
         <div class="btn-group drop-btn profile-dropdown user-div" uib-dropdown ng-if="userObj">
-          <button class="btn btn-mini my-alc-btn nopadding prof-btn" id="single-button" dropdown-toggle><img class="pro_pic" src="/assets/images/pro_pic.png">{{userObj.logged_userName}}
+          <button class="btn btn-mini my-alc-btn nopadding prof-btn" id="single-button" uib-dropdown-toggle><img class="pro_pic" src="/assets/images/pro_pic.png">{{userObj.logged_userName}}
             <i class="fa fa-caret-down color-blue heading-text"></i>
           </button>
           <ul class="dropdown-menu list-group user-list-group arrow_box"  role="menu" aria-labelledby="single-button">
