--- a/src/app/user-profile/user-profile.html
+++ b/src/app/user-profile/user-profile.html
@@ -51,7 +51,7 @@
 			Profile Settings
 		</div>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
+		<!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
 			<ul class="nav nav-tabs gride-tab root-category profile-setting-category">
 				<li class="active">
 					<a tabtoggle data-toggle="tab" href="#profile-details">Profile Details</a>
@@ -63,9 +63,9 @@
 					<a tabtoggle data-toggle="tab" href="#security">Security</a>
 				</li>
 			</ul>
-		</div>
+		</div> -->
 		<!-- Profile Details -->
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 update-exist tab-pane fade in active nopadding" id="profile-details">
+		<!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 update-exist tab-pane fade in active nopadding" id="profile-details">
 			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list profile-setting leftpadding toppadding profile-leftpadding-small">
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 inputs-div">
 					<div class="form-control search-div">
@@ -135,10 +135,10 @@
 					</button>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<!-- Portal Settings -->
-		<div id="portal-settings" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tab-pane fade update-exist nopadding profile-lrpadding-small">
+		<!-- <div id="portal-settings" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tab-pane fade update-exist nopadding profile-lrpadding-small">
 			<div class="row fields-row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
 					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 site-col job-site-list profile-setting">
@@ -158,9 +158,6 @@
 						</div>
 					</div>
 				</div>
-				<!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right change-portal-credentials">
-					<a class="desc-text invoice-no">Change Credentials</a>
-				</div> -->
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider"></div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 profile-setting portal-security-ques">
 					<h3 class="desc-text bold-font">Portal Security Question</h3>
@@ -186,10 +183,10 @@
 					</button>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<!-- Security -->
-		<div id="security" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tab-pane fade update-exist nopadding profile-lrpadding-small">
+		<!-- <div id="security" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tab-pane fade update-exist nopadding profile-lrpadding-small">
 			<div class="row fields-row">
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 site-col job-site-list profile-setting">
 					<div class="form-control search-div security-input">
@@ -229,7 +226,176 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding contracts-tab user-profile-tabs">
+		<uib-tabset>
+	    <uib-tab heading="Profile Settings">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding" id="profile-details">
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list profile-setting leftpadding toppadding profile-leftpadding-small">
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 inputs-div">
+							<div class="form-control search-div">
+								<input type="text" placeholder="First Name">
+								<i class="fa fa-user"></i>
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 inputs-div">
+							<div class="form-control search-div">
+								<input type="text" placeholder="Last Name">
+								<i class="fa fa-user"></i>
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 inputs-div">
+							<div class="form-control search-div">
+								<input type="text" placeholder="Email">
+								<i class="fa fa-envelope-o"></i>
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 inputs-div">
+							<div class="form-control search-div">
+								<input type="text" placeholder="Phone Number">
+								<i class="fa fa-phone"></i>
+							</div>
+						</div>
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 inputs-div">
+							<div class="form-control search-div">
+								<input type="text" placeholder="Company Name">
+								<i class="fa fa-building-o"></i>
+							</div>
+						</div>
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 inputs-div">
+							<div class="form-control search-div">
+								<input type="text" placeholder="Communication Address">
+								<i class="fa fa-map-marker"></i>
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 inputs-div">
+							<div class="form-control search-div">
+								<input type="text" placeholder="City">
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 inputs-div">
+							<div class="form-control search-div">
+								<input type="text" placeholder="Zip Code">
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 inputs-div">
+							<div class="form-control search-div">
+								<input type="text" placeholder="State">
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 inputs-div"></div>
+					</div>
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-detail pull-center">
+						<div class="upload-pic-div">
+							<i class="fa fa-user user-pic"></i>
+							<button class="btn all-btn sign_mybtn primary-btn fullwidth"><i class="fa fa-upload"></i> &nbsp Upload Picture</button>
+						</div>
+					</div>
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider"></div>
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cont-rent-btn ">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
+							<button class="btn sign_mybtn all-btn primary-btn profile-save-btn">Save</button>
+							<button class="btn sell-equ all-btn cont-renting">
+								Cancel
+							</button>
+						</div>
+					</div>
+				</div>
+	    </uib-tab>
+	    <uib-tab heading="Portal Settings">
+        <div id="portal-settings" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding profile-lrpadding-small">
+					<div class="row fields-row">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 site-col job-site-list profile-setting">
+								<h3 class="desc-text bold-font portal-creden">Portal Credentials</h3>
+								<div class="form-control search-div">
+									<input type="text" placeholder="Email">
+									<i class="fa fa-envelope-o"></i>
+								</div>
+							</div>
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"></div>
+						</div>
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding portal-setting">
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list profile-setting">
+								<div class="form-control search-div">
+									<input type="password" placeholder="Password">
+									<i class="fa fa-key"></i>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider"></div>
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 profile-setting portal-security-ques">
+							<h3 class="desc-text bold-font">Portal Security Question</h3>
+							<p class="desc-text">Recovery Email: 
+								<input class="form-control" placeholder="Email">
+							</p>
+							<p class="desc-text">Security Question:
+								<input class="form-control" placeholder="Question">
+							</p>
+							<p class="desc-text">Security Answer:
+								<input class="form-control" placeholder="Answer">
+							</p>
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+						</div>
+					</div>
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider"></div>
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cont-rent-btn ">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
+							<button class="btn sign_mybtn all-btn primary-btn profile-save-btn">Save</button>
+							<button class="btn sell-equ all-btn cont-renting">
+								Cancel
+							</button>
+						</div>
+					</div>
+				</div>
+	    </uib-tab>
+	    <uib-tab heading="Security">
+      	<div id="security" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding profile-lrpadding-small">
+					<div class="row fields-row">
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 site-col job-site-list profile-setting">
+							<div class="form-control search-div security-input">
+								<input type="password" placeholder="Old Password">
+								<i class="fa fa-key"></i>
+							</div>
+						</div>
+					</div>
+					<div class="row fields-row">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding portal-setting">
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list profile-setting">
+								<div class="form-control search-div">
+									<input type="password" placeholder="New Password">
+									<i class="fa fa-key"></i>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row fields-row">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding portal-setting">
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list profile-setting">
+								<div class="form-control search-div">
+									<input type="password" placeholder="Confirm Password">
+									<i class="fa fa-key"></i>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider"></div>
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cont-rent-btn ">
+							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+								<button class="btn sign_mybtn all-btn primary-btn profile-save-btn">Save</button>
+								<button class="btn sell-equ all-btn cont-renting">
+									Cancel
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+	    </uib-tab>
+	  </uib-tabset>
+      </div>
+	</div>
 	</div>
 </div>
 
