--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -39,7 +39,7 @@
               <i class="fa fa-file my-verti-icon"></i>
               <span class="sidebar-heading">View Invoices</span></a>
             </li>
-            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a  ui-sref="hm.dashboard.requests"class="bottomborder"><i class="fa fa-comments my-verti-icon"></i>
+            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a  ui-sref="hm.dashboard.requests"><i class="fa fa-comments my-verti-icon"></i>
               <span class="sidebar-heading">Requests</span></a>
             </li>
             <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()" ng-if="userObj.portal_login"><a  ui-sref="hm.dashboard.viewContracts" class="bottomborder"><i class="fa fa-briefcase my-verti-icon"></i>
