--- a/src/app/contracts/contracts.html
+++ b/src/app/contracts/contracts.html
@@ -3,19 +3,62 @@
 			Contracts
 	</div>
 	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right nopadding my-bottm-line dash_board_tit job-site-list">
-		<!-- <i class="fa fa-filter marker pull-right heading-text search-filter-icon" ng-click="filter()"></i> -->
-		<i class="fa fa-search marker pull-right heading-text search-filter-icon" ng-click="search()"></i>
-		<div class="form-control search-div quotes-search hidden-xs" ng-class="{'searchShow jobsite-search-show': showSearch}">
+    <i class="fa fa-filter marker pull-right heading-text search-filter-icon" ng-click="toggleFilter()"></i>
+		<i class="fa fa-search marker pull-right heading-text search-filter-icon" ng-click="toggleSearch()"></i>
+		<div class="form-control search-div quotes-search hidden-xs" ng-class="{'searchShow jobsite-search-show': flags.showSearch}">
 			<input type="text" placeholder="Contract Id">
 		</div>
 	</div>
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 arrow_box job-site-list quotes-filter-div filter-arrow-box" ng-class="{'filter-show': flags.showFilter}">
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+      <p class="desc-text">From Date</p>
+      <div class="form-control search-div select-date">
+        <input type="text"
+               datetime-picker="MM/dd/yyyy"
+               datepicker-options="{startingDay:0}"
+               enable-time="false"
+               ng-model="flags.fromDate"
+               is-open="flags.fromDtOpened"
+
+               ng-click="flags.fromDtOpened= !flags.fromDtOpened"
+               placeholder="dd/mm/yyyy">
+        <i class="fa fa-calendar"></i>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+      <p class="desc-text">To Date</p>
+      <div class="form-control search-div select-date">
+        <input type="text"
+               datetime-picker="MM/dd/yyyy"
+               ng-model="flags.toDate"
+               enable-time="false"
+               placeholder="dd/mm/yyyy"
+               is-open="flags.toDtOpened"
+               datepicker-options="{startingDay:0}"
+               ng-click="flags.toDtOpened= !flags.toDtOpened">
+        <i class="fa fa-calendar"></i>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+      <p class="desc-text">Contract</p>
+      <div class="form-control search-div select-date">
+        <input type="text" placeholder="Enter contract Keyword" ng-model="flags.contractName">
+        <i class="fa fa-marker"></i>
+      </div>
+    </div>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 site-btn-div text-right devider">
+      <button class="btn sign_mybtn all-btn primary-btn filter-btns">Apply</button>
+      <button class="btn sign_mybtn all-btn primary-btn filter-btns" ng-click="reset()">Reset</button>
+    </div>
+  </div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding contracts-tab">
 		<uib-tabset>
 	    <uib-tab heading="Open Contract" select="loadOpenContracts()">
         <div>
 	        <div class="form-group" cg-busy="{promise:contractPromise,message:'Loading...'}">
-	          <table class="table quotes-table open-contract-table" ng-show="openContracts.length">
+            <div ng-show="openContracts.length">
+	          <table class="table quotes-table open-contract-table">
 							<thead>
 								<tr>
 									<th>Contract Id</th>
@@ -40,37 +83,51 @@
 								</tr>
 							</tbody>
 						</table>
-            <uib-pagination ng-show="openContracts.length" total-items="flags.ContactList_Quantity * flags.Total_pages" ng-model="flags.Page"  ng-change="pageChanged()" max-size="10" rotate="false" boundary-link-numbers="true" force-ellipses="true"></uib-pagination>
+            <uib-pagination total-items="flags.ContactList_Quantity * flags.Total_pages" ng-model="flags.PageNoforOpen"  ng-change="pageChanged()" max-size="10" rotate="false" boundary-link-numbers="true" force-ellipses="true"></uib-pagination>
+            </div>
+            <div ng-show="!openContracts.length && !flags.dataLoading" >
+              <h3 class="heading-text cart-empty pull-center">
+                <i class="fa fa-file-o"></i> <span style="margin-left: 5px;">Sorry!. No Open Contracts</span>
+              </h3>
+            </div>
 	        </div>
           </div>
 	    </uib-tab>
 	    <uib-tab heading="Close Contract" select="loadClosedContracts()">
         <div cg-busy="{promise:contractPromise,message:'Loading...'}">
-	      <table class="table quotes-table open-contract-table" ng-show="closedContracts.length" >
-					<thead>
-					<tr>
-						<th>Contract Id</th>
-						<th>Job Site Name</th>
-						<th>Date</th>
-						<th>PO</th>
-						<th></th>
-					</tr>
-					</thead>
-					<tbody>
-						<tr ng-repeat="contract in closedContracts">
-							<td>
-								<a class="invoice-no">{{contract.Contract_No}}</a>
-							</td>
-							<td>{{contract.Site_Name}}</td>
-							<td>{{contract.Date}}</td>
-							<td>{{contract.Purchase_Order_No}}</td>
-							<td class="text-right">
-								<a class="invoice-no view-down view-down-quotation"><i class="fa fa-download invoice-no heading-text"></i></a>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-          <uib-pagination ng-show="closedContracts.length" total-items="flags.ContactList_Quantity * flags.Total_pages" ng-model="flags.Page"  ng-change="pageChanged()" max-size="10" rotate="false" boundary-link-numbers="true" force-ellipses="true"></uib-pagination>
+          <div ng-show="closedContracts.length">
+            <table class="table quotes-table open-contract-table">
+              <thead>
+              <tr>
+                <th>Contract Id</th>
+                <th>Job Site Name</th>
+                <th>Date</th>
+                <th>PO</th>
+                <th></th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr ng-repeat="contract in closedContracts">
+                <td>
+                  <a class="invoice-no">{{contract.Contract_No}}</a>
+                </td>
+                <td>{{contract.Site_Name}}</td>
+                <td>{{contract.Date}}</td>
+                <td>{{contract.Purchase_Order_No}}</td>
+                <td class="text-right">
+                  <a class="invoice-no view-down view-down-quotation"><i class="fa fa-download invoice-no heading-text"></i></a>
+                </td>
+              </tr>
+              </tbody>
+            </table>
+            <uib-pagination ng-show="closedContracts.length" total-items="flags.ContactList_Quantity * flags.Total_pages" ng-model="flags.PageNoforClosed"  ng-change="pageChanged()" max-size="10" rotate="false" boundary-link-numbers="true" force-ellipses="true"></uib-pagination>
+          </div>
+          <div ng-show="!closedContracts.length && !flags.dataLoading" >
+            <h3 class="heading-text cart-empty pull-center">
+              <i class="fa fa-file-o"></i> <span style="margin-left: 5px;">Sorry!. No Closed Contracts</span>
+            </h3>
+          </div>
+
           </div>
 	    </uib-tab>
 	  </uib-tabset>
