Invoice API Integration

--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -42,7 +42,7 @@
             <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a  ui-sref="hm.dashboard.requests"><i class="fa fa-comments my-verti-icon"></i>
               <span class="sidebar-heading">Requests</span></a>
             </li>
-            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()" ng-if="userObj.portal_login"><a  ui-sref="hm.dashboard.viewContracts" class="bottomborder"><i class="fa fa-briefcase my-verti-icon"></i>
+            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()" ng-if="userObj.portal_login"><a  ui-sref="hm.dashboard.contracts" class="bottomborder"><i class="fa fa-briefcase my-verti-icon"></i>
               <span class="sidebar-heading">View Contracts</span></a>
             </li>
 
