--- a/src/app/invoices/invoices.html
+++ b/src/app/invoices/invoices.html
@@ -1,4 +1,4 @@
-<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12" cg-busy="invoicesPromise">
   <!--<div ng-show="flags.invoicesInProgress" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
     <!--<load-indicator loading="flags.invoicesInProgress"></load-indicator>-->
   <!--</div>-->
@@ -50,12 +50,12 @@
           </div>
     </div>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot bord_dash_bot_small"></div>
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 manage-job-btn-col invoices-btn-div" style="visibility: hidden;" ng-style="{'visibility': flags.invoicesInProgress ? 'hidden':'visible'}">
-      <button class="btn btn-default pull-right manage-job-btn deactivate list all-btn" ng-class="{'active primary-btn' : flags.outstanding}" ng-click="toggleInvoiceView(true)">Outstanding</button>
-      <button class="btn btn-default pull-right manage-job-btn deactivate map all-btn" ng-click="toggleInvoiceView(false)" ng-class="{'active primary-btn' : !flags.outstanding}">All Invoices</button>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 manage-job-btn-col invoices-btn-div">
+      <button class="btn btn-default pull-right manage-job-btn deactivate list all-btn" ng-class="{'active primary-btn' : flags.outstanding ==='Y'}" ng-click="toggleInvoiceView()">Outstanding</button>
+      <button class="btn btn-default pull-right manage-job-btn deactivate map all-btn" ng-click="toggleInvoiceView()" ng-class="{'active primary-btn' : flags.outstanding !=='Y'}">All Invoices</button>
     </div>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding"><hr class="devider"></div>
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding hidden-xs" cg-busy="invoicesPromise">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding hidden-xs">
       <table class="table table-striped quotes-table">
         <thead>
         <tr>
@@ -70,25 +70,25 @@
         </thead>
         <tbody>
         <tr ng-repeat="invoice in invoices">
-          <td><a href="#/invoice-detail" class="invoice-no">{{invoice.InvoiceID}}</a></td>
+          <td><a ui-sref="hm.dashboard.invoiceDetail({ id : invoice.InvoiceID })" class="invoice-no">{{invoice.InvoiceID}}</a></td>
           <td>{{invoice.Site_Name}}</td>
           <td>{{invoice.Source}}</td>
-          <td>{{invoice.PurchaseOrder}}</td>
+          <td>{{invoice.Purchase_Order_ID}}</td>
           <td>{{invoice.Total}}</td>
           <td>{{invoice.Balance}}</td>
           <td>
-            <a href="#/invoice-detail" class="invoice-no view-down heading-text"><i class="fa fa-eye invoice-no"></i></a>
+            <a ui-sref="hm.dashboard.invoiceDetail({ id : invoice.InvoiceID })" class="invoice-no view-down heading-text"><i class="fa fa-eye invoice-no"></i></a>
             <a   class="invoice-no view-down heading-text"><i class="fa fa-download invoice-no"></i></a></td>
         </tr>
         </tbody>
       </table>
 
-      <uib-pagination ng-show="invoices.length && flags.qty >= 10 && flags.total_pages > 1" total-items="flags.qty * flags.total_pages" ng-model="flags.page"  ng-change="pageChange()" max-size="10" rotate="false" boundary-link-numbers="true" force-ellipses="true"></uib-pagination>
+      <uib-pagination ng-show="invoices.length && flags.qty >= 10 && flags.total_pages > 1" ng-if="flags.qty * flags.total_pages" total-items="flags.qty * flags.total_pages" ng-model="flags.page"  ng-change="pageChange()" max-size="10" rotate="false" boundary-link-numbers="true" force-ellipses="true"></uib-pagination>
     </div>
     <div class="col-xs-12 visible-xs">
       <div ng-repeat="invoice in invoices" class="invoices-small">
         <p class="bold-font desc-text">Invoice
-          <a href="#/invoice-detail" class="invoice-no pull-right"><span># {{invoice.InvoiceID}}</span></a>
+          <a ui-sref="hm.dashboard.invoiceDetail({ id : invoice.InvoiceID })" class="invoice-no pull-right"><span># {{invoice.InvoiceID}}</span></a>
         </p>
         <p class="bold-font desc-text">{{invoice.Site_Name}}</p>
         <p class="desc-text">{{invoice.Source}}</p>
@@ -96,7 +96,7 @@
           <span class="desc-text bold-font pull-right">Due Amount{{invoice.Balance}}</span>
         </p>
         <div>
-          <a href="#/invoice-detail" class="btn primary-btn all-btn sign_mybtn autowidth"><i class="fa fa-eye white-color"></i>&nbsp View</a>
+          <a ui-sref="hm.dashboard.invoiceDetail({ id : invoice.InvoiceID })" class="btn primary-btn all-btn sign_mybtn autowidth"><i class="fa fa-eye white-color"></i>&nbsp View</a>
           <button class="btn primary-btn all-btn sign_mybtn autowidth"><i class="fa fa-download white-color"></i>&nbsp Download</button>
         </div>
       </div>
