--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -31,18 +31,18 @@
               <i class="fa fa-bookmark my-verti-icon"></i>
               <span class="sidebar-heading">Quotation</span></a>
             </li>
-            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()" ng-if="userObj.portal_login"><a  ui-sref="hm.dashboard.makePayment">
+            <li ui-sref-active="active" class="nomargin"  ng-click="closeFilter()" ng-if="userObj.portal_login"><a  ui-sref="hm.dashboard.makePayment">
               <i class="fa fa-usd my-verti-icon"></i>
               <span class="sidebar-heading">Make a Payment</span></a>
             </li>
-            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()" ng-if="userObj.portal_login"><a  ui-sref="hm.dashboard.invoices">
+            <li ui-sref-active="active" class="nomargin" ng-init="active=false" ng-click="closeFilter()" ng-if="userObj.portal_login"><a  ui-sref="hm.dashboard.invoices">
               <i class="fa fa-file my-verti-icon"></i>
               <span class="sidebar-heading">View Invoices</span></a>
             </li>
             <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a  ui-sref="hm.dashboard.requests"><i class="fa fa-comments my-verti-icon"></i>
               <span class="sidebar-heading">Requests</span></a>
             </li>
-            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()" ng-if="userObj.portal_login"><a  ui-sref="hm.dashboard.contracts" class="bottomborder"><i class="fa fa-briefcase my-verti-icon"></i>
+            <li ui-sref-active="active" class="nomargin"  ng-init="active=false" ng-click="closeFilter()" ng-if="userObj.portal_login"><a  ui-sref="hm.dashboard.contracts" class="bottomborder"><i class="fa fa-briefcase my-verti-icon"></i>
               <span class="sidebar-heading">View Contracts</span></a>
             </li>
 
