Manage JobSite Changes

--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -19,7 +19,7 @@
               <i class="fa fa-heart my-verti-icon catelog-icon"></i>
               <span class="sidebar-heading">My Catalog</span></a>
             </li>
-            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a  ui-sref="hm.dashboard.jobSites">
+            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a  ui-sref="hm.dashboard.jobSites({listView : true})">
               <i class="fa fa-map-marker my-verti-icon"></i>
               <span class="sidebar-heading">Manage Job Sites</span></a>
             </li>
