--- a/src/app/jobsites/jobsites.html
+++ b/src/app/jobsites/jobsites.html
@@ -2,13 +2,9 @@
   <!-- <div class="tab-content"> -->
   <!-- START  Dashboard Content -->
   <!-- <div id="dash" class="tab-pane fade in active"> -->
-  <div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <load-indicator loading="flags.jobSiteFetchInProgress"></load-indicator>
-      </div>
-  </div>
 
-  <div ng-style="{'visibility': flags.jobSiteFetchInProgress? 'hidden':'visible'}">
+
+  <div cg-busy="jobsitesPromise">
 
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 nopadding my-bottm-line manage_job_tit">
       Manage Job Sites
@@ -58,8 +54,8 @@
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 manage-job-btn-col">
       <a ui-sref="hm.dashboard.jobSites.addJobSite" class="btn pull-left manage-job-btn add-job-site-btn sign_mybtn all-btn primary-btn">Add Job Site</a>
-      <button class="btn btn-default pull-right manage-job-btn deactivate list list-view-btn all-btn" ng-class="{'active primary-btn' : params.listView}" ng-click="toggleListView(true)">List View</button>
       <button class="btn btn-default pull-right manage-job-btn deactivate map map-view-btn all-btn" ng-click="toggleListView(false)" ng-class="{'active primary-btn' : !params.listView}">Map View</button>
+      <button class="btn btn-default pull-right manage-job-btn deactivate list list-view-btn all-btn" ng-class="{'active primary-btn' : params.listView}" ng-click="toggleListView(true)">List View</button>
     </div>
     <!-- map view start -->
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 job-ste-box" ng-if="!params.listView">
@@ -70,8 +66,11 @@
     <!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"> -->
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding" ng-if="params.listView">
       <job-site-list-view></job-site-list-view>
+
     </div>
   </div>
+
+
 </div>
 
 
