--- a/src/app/jobsites/jobsites.html
+++ b/src/app/jobsites/jobsites.html
@@ -54,17 +54,17 @@
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 manage-job-btn-col">
       <a ui-sref="hm.dashboard.jobSites.addJobSite" class="btn pull-left manage-job-btn add-job-site-btn sign_mybtn all-btn primary-btn">Add Job Site</a>
-      <button class="btn btn-default pull-right manage-job-btn deactivate map map-view-btn all-btn" ng-click="toggleListView(false)" ng-class="{'active primary-btn' : !params.listView}">Map View</button>
-      <button class="btn btn-default pull-right manage-job-btn deactivate list list-view-btn all-btn" ng-class="{'active primary-btn' : params.listView}" ng-click="toggleListView(true)">List View</button>
+      <button class="btn btn-default pull-right manage-job-btn deactivate map map-view-btn all-btn" ng-click="toggleMapView(true)" ng-class="{'active primary-btn' : params.mapView}">Map View</button>
+      <button class="btn btn-default pull-right manage-job-btn deactivate list list-view-btn all-btn" ng-class="{'active primary-btn' : !params.mapView}" ng-click="toggleMapView(false)">List View</button>
     </div>
     <!-- map view start -->
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 job-ste-box" ng-if="!params.listView">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 job-ste-box" ng-if="params.mapView">
       <job-site-map-view></job-site-map-view>
     </div>
     <!-- map view end -->
     <!-- list view start -->
     <!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"> -->
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding" ng-if="params.listView">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding" ng-if="!params.mapView">
       <job-site-list-view></job-site-list-view>
 
     </div>
