--- a/src/app/jobsites/list.html
+++ b/src/app/jobsites/list.html
@@ -12,10 +12,10 @@
     <td>{{jobsite.Site_Name}}</td>
     <td class="text-right">
       <a class="invoice-no view-down"  ng-click="viewJobSiteDetails(jobsite);"><i class="fa fa-eye invoice-no heading-text"></i></a>
-      <a ui-sref="hm.dashboard.jobSites.editJobSite({data : jobsite})" class="invoice-no view-down"><i class="fa fa-pencil-square-o invoice-no heading-text"></i></a>
+      <a ui-sref="hm.dashboard.jobSites.editJobSite({data : jobsite, page : flags.page})" class="invoice-no view-down"><i class="fa fa-pencil-square-o invoice-no heading-text"></i></a>
       <a ng-click="deleteJobSite(jobsite)" class="invoice-no view-down"><i class="fa fa-trash invoice-no heading-text"></i></a></td>
   </tr>
   </tbody>
 </table>
 
-<uib-pagination ng-show="jobsites.length && flags.qty >= 10 && flags.total_pages > 1" ng-if="flags.qty * flags.total_pages" total-items="flags.qty * flags.total_pages" ng-model="flags.page"  ng-change="pageChange()" max-size="10" rotate="false" boundary-link-numbers="true" force-ellipses="true"></uib-pagination>
+<uib-pagination ng-if="flags.qty * flags.total_pages" total-items="flags.qty * flags.total_pages" ng-model="flags.page"  ng-change="pageChange()" max-size="10" rotate="false" boundary-link-numbers="true" force-ellipses="true"></uib-pagination>
