--- a/src/app/my-catalogue/my-catalogue.html
+++ b/src/app/my-catalogue/my-catalogue.html
@@ -2,10 +2,7 @@
 
   <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12 display_side nopadding catalog-div">
     <div class="clearfix">
-      <div ng-show="catelogFetchInProgress" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <load-indicator loading="catelogFetchInProgress"></load-indicator>
-      </div>
-      <div ng-style="{'visibility': catelogFetchInProgress ? 'hidden':'visible'}">
+      <div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-bottm-line manage_job_tit manage_job_tit_small">
           My Catalog
         </div>
@@ -13,7 +10,7 @@
           <a class="dash_board_light invoice-no" href="#/">Home </a> <i class="fa fa-chevron-right icon-text color-blue"></i> <span class="dash_board_bold">Catalog</span>
         </div>
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
-        <div ng-show="!catelog.length" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pull-center">
+        <div ng-show="flags.noCatalogue" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pull-center">
           <h3 class="heading-text cart-empty pull-center">
             Sorry! No Items in Catalog.
           </h3>
@@ -22,7 +19,8 @@
           </button>
           <!-- <a ui-sref="hm.search.results"> Go Back</a> -->
         </div>
-        <div class="col-md-4 lift_box nopadding repeat-item pull-left" ng-repeat="product in catelog">
+        <div cg-busy="myCataloguePromise">
+        <div class="col-md-4 lift_box nopadding repeat-item pull-left" ng-repeat="product in catelog"  ng-show="!flags.noCatalogue">
           <figure class="catalogue-fig">
             <a ui-sref="hm.equipmentDetails({id: product.Product_Id})"><img alt="" ng-src="{{product.Product_Image[0].ProductImage_Path}}"/></a>
             <!-- <div class="certified_box"> -->
@@ -61,6 +59,7 @@
               <a ng-click="removeFromWishList(product)"><i class="fa fa-heart fa-2x pull-right" btn-load-indicator="Add:Wishlist:Process"  btn-uid="product.Product_Id" ng-class="{'wish-added': product.Is_in_catelog}"></i></a>
             </div>
           </div>
+        </div>
         </div>
       </div>
     </div>
